# lcwc-api

./: .dockerignore  .env.default  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  middleware.py
app/api/models/: __init__.py  agency.py  incident.py  unit.py
app/api/routes/: agencies.py  incident.py  incidents.py  meta.py  root.py  units.py
app/api/templates/: api.html
app/database/: seed.py
app/database/models/: __init__.py  agency.py  feed_request.py  incident.py  unit.py
app/models/: __init__.py  agency.py  incident.py  unit.py
app/routers/: agencies.py  incidents.py  root.py
app/services/: agencyupdater.py  geocoder.py  incidentresolver.py  updater.py
app/templates/: index.html
app/utils/: info.py  logging.py
config/: config_default.toml
